--- a/assets/stylesheets/work_time.css
+++ b/assets/stylesheets/work_time.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
   margin-top: 0;
   margin-bottom: 0
 }
@@ -6,7 +6,7 @@ h1 {
 h2 {
   margin-top: 0;
   margin-bottom: 0
-}
+} */
 
 div.wt_modified {
   background: #cfc;
